--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,9 @@
     <footer class="site-footer clearfix">
       <section class="copyright">
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
-              {{"now" | date: "%Y"}} &bull; All rights reserved.
+              {{"now" | date: "%Y"}} &bull; all rights reserved.
       </section>
-      <section class="poweredby">Made with Jekyll using 
-        <a href="http://github.com/rosario/kasper">Kasper theme</a>
+      <section class="poweredby">made with <a target="_blank" href="https://jekyllrb.com">jekyll</a> and hosted on <a target="_blank" href="https://github.com">github</a>
       </section>
     </footer>
     
