--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,6 @@
 
     <link rel="stylesheet" type="text/css" href="{{'/assets/css/screen.css' | relative_url}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
-    <!-- Customisation  -->
     <link rel="stylesheet" type="text/css" href="{{'/assets/css/main.css' | relative_url}} " />
 
 </head>
@@ -25,7 +24,7 @@
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
               {{"now" | date: "%Y"}} &bull; all rights reserved.
       </section>
-      <section class="poweredby">made with <a target="_blank" href="https://jekyllrb.com">jekyll</a> and hosted on <a target="_blank" href="https://github.com">github</a>
+      <section class="poweredby">made with <a target="_blank" href="https://jekyllrb.com">jekyll</a> hosted on <a target="_blank" href="https://github.com">github</a>
       </section>
     </footer>
     
